--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,7 @@
 name=ESP32-FTP
 version=1.0.0
-author=SahdowFury'513413654@qq.com'
+maintainer=SahdowFury <513413654@qq.com>
+author=SahdowFury
 sentence=A library for FTP with ESP32
 paragraph=This library helps in managing FTP connections using ESP32.
 category=Communication
